feat: To generated apiKey constructor.
