# src/libs/DeepInfra/Generated/DeepInfra.DeepInfraApi.Authorizations.Bearer.g.cs
@@ -1,0 +1,22 @@
+
+#nullable enable
+
+namespace DeepInfra
+{
+    public sealed partial class DeepInfraApi
+    {
+        /// <summary>
+        /// Authorize using bearer authentication.
+        /// </summary>
+        /// <param name="apiKey"></param>
+        public void AuthorizeUsingBearer(
+            string apiKey)
+        {
+            apiKey = apiKey ?? throw new global::System.ArgumentNullException(nameof(apiKey));
+
+            _httpClient.DefaultRequestHeaders.Authorization = new global::System.Net.Http.Headers.AuthenticationHeaderValue(
+                scheme: "Bearer",
+                parameter: apiKey);
+        }
+    }
+}
